--- a/index.html
+++ b/index.html
@@ -29,21 +29,43 @@
   <link href="assets/css/main.css" rel="stylesheet">
 
   <script type="application/ld+json">
-    {
-        "@context": "https://schema.org", "@type": "Organization",
-        "@type": "Organization"
-        "name": "Rathore Glass House",
-        "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Biharipur Village, Nai Basti Dundahera, Gaur City 2, Ghaziabad, Uttar Pradesh 201009",
-        "addressLocality": "Uttar Pradesh",
-        "addressRegion": "Uttar Pradesh",
-        "postalCode": "201009",
-        "addressCountry": "India"
-    },
-        "telephone":"+91 8745005468"
-    }
-  </script>
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "Rathore glass house-Tuffen glass work,aluminium glass work, fancy led mirror, glass designing work in gaur city",
+  "image": "https://www.rathoreglasshouse.shop/assets/img/about.jpg",
+  "@id": "https://www.justdial.com/Ghaziabad/Rathore-Glass-House-Crossing-Republik/011PXX11-XX11-240226172002-Z7E4_BZDET",
+  "url": "https://www.rathoreglasshouse.shop/assets/img/contact.jpg",
+  "telephone": "08745005468",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "18, Gaur City 2 Rd, Biharipur Village, Gaur City 2, Greater Noida, Ghaziabad, Uttar Pradesh 201009",
+    "addressLocality": "Ghaziabad",
+    "postalCode": "201009",
+    "addressCountry": "IN"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 28.6152242,
+    "longitude": 77.4250395
+  },
+  "openingHoursSpecification": {
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": [
+      "Monday",
+      "Tuesday",
+      "Wednesday",
+      "Thursday",
+      "Friday",
+      "Saturday",
+      "Sunday"
+    ],
+    "opens": "09:00",
+    "closes": "21:00"
+  },
+  "sameAs": "https://www.rathoreglasshouse.shop/" 
+}
+</script>
 </head>
 
 <body class="index-page">
