--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
           </div><!-- End Contact Form -->
         </div>
         <div>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3502.16872713336!2d77.4231621738367!3d28.624704784439054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cefaf4364116b%3A0x2306b4aa5ea82aa9!2sRathore%20glass%20house-Tuffen%20glass%20work%2Caluminium%20glass%20work%2C%20fancy%20led%20mirror%2C%20glass%20designing%20work%20in%20gaur%20city!5e0!3m2!1sen!2sin!4v1750609584209!5m2!1sen!2sin" width="auto" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3502.16872713336!2d77.4231621738367!3d28.624704784439054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cefaf4364116b%3A0x2306b4aa5ea82aa9!2sRathore%20glass%20house-Tuffen%20glass%20work%2Caluminium%20glass%20work%2C%20fancy%20led%20mirror%2C%20glass%20designing%20work%20in%20gaur%20city!5e0!3m2!1sen!2sin!4v1750609584209!5m2!1sen!2sin" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
     </section><!-- /Contact Section -->
